Stop disabling web usage if closing incognito tabs

It is not necessary to disable web usage when clearing
off-the-record browsing data (as the WebKit bug is not
exercised in that case).

Bug: 821753
Change-Id: I62b011ac182f8e8b7107109a23ac8102da44e574
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Reviewed-on: https://chromium-review.googlesource.com/970466
Commit-Queue: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544357}
Former-commit-id: 7d6ceb1e0f8e3dd28ac71d70988a687ceadbc5e3